# HFA-Mamba

./: .gitignore  LICENSE  README.md  SETUP.md  build_with_mambayolo.sh  mbyolo_train.py  pyproject.toml
asserts/: README.md
docs/: ablations.md  data_process.md  integration.md
selective_scan/: README.md
tests/: test_hfrm_sbl.py
ultralytics/cfg/models/hfa-mamba/: HFA-Mamba-B.yaml  HFA-Mamba-L.yaml  HFA-Mamba-T.yaml  sbl.yaml
ultralytics/cfg/models/hfa-mamba/ablation/: HFA-Mamba-B_baseline.yaml  HFA-Mamba-B_hfrm-p3.yaml  HFA-Mamba-B_hfrm-p3p4.yaml  HFA-Mamba-B_hfrm-p4.yaml  HFA-Mamba-B_hfrm-p5.yaml
ultralytics/nn/modules/: hfrm.py
ultralytics/utils/: sbl.py
